--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore node_modules everywhere
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Ignore node_modules everywhere
+node_modules/
+frontend/node_modules/
+backend/node_modules/
